--- a/app/assets/stylesheets/journals.scss
+++ b/app/assets/stylesheets/journals.scss
@@ -13,7 +13,7 @@
     padding: 10px 1em;
     margin-right: 0.5em;
     margin-left: 0.5em;
-    width: 30%;
+    width: 16.5em;
     height: 25em;
     border-top: 1px solid #e8e8e8;
     float: left;
@@ -43,7 +43,7 @@
 .journal-preview-title {
   font-family: 'Futura Std';
   font-size: 1.05em;
-  line-height: 2;
+  line-height: 1;
   .link-colour {
     color: black;
   }
